@@ -262,7 +262,7 @@ class TestSymbol < Test::Unit::TestCase
     assert_equal(Encoding::US_ASCII, "$-A".force_encoding("iso-8859-15").intern.encoding)
     assert_equal(Encoding::US_ASCII, "foobar~!".force_encoding("iso-8859-15").intern.encoding)
     assert_equal(Encoding::UTF_8, "\u{2192}".intern.encoding)
-    assert_raise(EncodingError) {"\xb0a".force_encoding("utf-8").intern}
+    assert_raise_with_message(EncodingError, /\\xb0/i) {"\xb0a".force_encoding("utf-8").intern}
   end
 
   def test_singleton_method
